tests/errmsgs/tuncheckedarrayvar.nim
discard """
errormsg: '''
invalid type: 'UncheckedArray[uint8]' for var
'''
"""

var byteUA: UncheckedArray[uint8]
